--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "stm-infinity-paginator",
   "version": "1.0.0",
   "description": "Infinity paginator for long news feeds, supports History API, is hookable",
-  "main": "infinity-paginator.js",
+  "main": "lib/infinity-paginator.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "rimraf lib/* && babel src -d lib",
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,11 @@
   "dependencies": {
     "core-js": "^2.4.1",
     "jquery": ">= 1.11.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-preset-es2015": "^6.16.0",
+    "rimraf": "^2.5.4"
   }
 }
